# phist

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CHANGELOG.md  CMakeLists.txt  Checkpoint.cpp  Checkpoint.hpp  CpArray.hpp  CpBase.hpp  CpGhost.hpp  CpHelperFuncs.hpp  CpPOD.hpp  CpPhistMvec.cpp  CpPhistMvec.h  CpPhistMvec.hpp  CpPhistMvec_decl.h  CpPhistMvec_def.hpp  LICENSE.txt  Makefile  README  README.md  README.txt  REQUIREMENTS.txt  aft.cpp  aft.h  aft_macros.h  cp.cpp  cp.h  cpPOD.h  cp_array.h  cp_ghostdensemat.h  cp_options.cpp  cp_options.h  cpaft-config.cmake.in  craft-config.cmake.in  esmac_aux.c  esmac_aux.h  esmac_cmk.c  esmac_cmk.h  esmac_collection.c  (+114 more)
buildScripts/: build-trilinos-gpu.sh  ci-sc-dlr-spack.sh  ci-sc-dlr.sh  phist_tpetra_cuda.sh  script-delftblue-builtin.sh  script_emmy_builtin.sh  script_emmy_ghost.sh  script_feast.sh  script_lima.sh  script_sc-hpc_builtin.sh  script_sc-hpc_tpetra_cuda.sh  script_woody_hw_mpack.sh  test_install.sh
cmake/: CheckCPUFeatures.cmake  CheckFortranSourceCompiles.cmake  CheckIntrinsics.cmake  CheckLanguageFeatures.cmake  CheckMetisUsable.cmake  CheckTrilinosTypes.cmake  EpetraConfig.cmake  FindColPack.cmake  FindGHOST.cmake  FindKaHIP.cmake  FindLAPACKE.cmake  FindMAGMA.cmake  FindMPACK.cmake  FindMPI.cmake  FindPETSC.cmake  FindParMETIS.cmake  HandleTPLs.cmake  HandleTrilinosTPLs.cmake  KernelLibSettings.cmake  LikwidConfig.cmake  PHIST_Options.cmake  SetCompilerFlagsCLANG.cmake  SetCompilerFlagsGNU.cmake  SetCompilerFlagsINTEL.cmake  SetCompilerFlagsPGI.cmake  SetHostCompileFlag.cmake  TpetraConfig.cmake  essex_dlr.doxyfile  phist.doxyfile  xSDK_Options.cmake
cxx_bindings/: CMakeLists.txt  make_cxx_bindings.py.in  make_cxx_wrapers.py  phist_exception.hpp  phist_exceptions.hpp  phist_kernels.hh  phist_types.hpp  test_cxx_bindings.cpp
doc/: DoxygenLayout.xml  doxygen_preprocess.sh.in  phist.doxyfile.in  related_pages.txt
doc_html/: files.html  globals.html  globals_func.html  group__internal.html  group__library.html  group__matrix.html  group__mwe.html  group__toolbox.html  index.html  menudata.js  modules.html  mwe__slepc_8c.html  scamac_8h.html  scamac_8h_source.html  scamac__aux_8h.html  scamac__aux_8h_source.html  scamac__cblas_8h.html  scamac__cblas_8h_source.html  scamac__clapack_8h.html  scamac__clapack_8h_source.html  scamac__cmk_8h_source.html  (+56 more)
drivers/matfuncs/scamac/: CMakeLists.txt  makefile_mpi.in  makefile_mwe_external  mwe_serial_query.c  mwe_serial_scale.c  mwe_slepc.c  scamac.h  scamac_aux.c  scamac_cblas.c  scamac_clapack.h  scamac_cmk.c  scamac_cmk.h  scamac_collection.c  scamac_collection_example_desc_inc.c  scamac_collection_example_inc.c  scamac_collection_identify_parameter_inc.c  scamac_collection_inc.h  scamac_collection_list_examples_inc.c  scamac_collection_set_double_inc.c  scamac_collection_set_option_inc.c  scamac_collection_set_rngseed_inc.c  scamac_collection_set_rngseed_str_inc.c  scamac_config.h.in  scamac_dof_bosons.c  scamac_dof_bosons.h  scamac_dof_fermions.h  scamac_dof_spins.c  scamac_dof_spins.h  scamac_generator.h  scamac_include.h  scamac_internal.h  scamac_lanczos.c  scamac_lut.c  scamac_lut.h  scamac_matrix_Anderson.h  scamac_matrix_Exciton.h  scamac_matrix_FreeBosonChain.c  scamac_matrix_FreeBosonChain.h  scamac_matrix_FreeFermionChain.h  scamac_matrix_Harmonic.h  (+26 more)
drivers/matfuncs/scamac/doc_html/: files.html  group__internal.html  group__library.html  group__matrix.html  group__mwe.html  group__toolbox.html  index.html  modules.html  mwe__slepc_8c.html  pages.html  scamac_8h.html  scamac_8h_source.html  scamac__aux_8h.html  scamac__aux_8h_source.html  scamac__cblas_8h.html  scamac__cblas_8h_source.html  scamac__clapack_8h_source.html  scamac__cmk_8h_source.html  scamac__collection_8h.html  scamac__collection_8h_source.html  scamac__dof__bosons_8h.html  scamac__dof__bosons_8h_source.html  scamac__dof__fermions_8h.html  scamac__dof__fermions_8h_source.html  scamac__dof__spins_8h.html  scamac__dof__spins_8h_source.html  scamac__generator_8h.html  scamac__generator_8h_source.html  scamac__include_8h.html  scamac__include_8h_source.html  scamac__lanczos_8h_source.html  scamac__lut_8h.html  scamac__lut_8h_source.html  scamac__matrix___anderson_8h_source.html  scamac__matrix___exciton_8h_source.html  scamac__matrix___free_boson_chain_8h.html  scamac__matrix___free_fermion_chain_8h.html  scamac__matrix___free_fermion_chain_8h_source.html  scamac__matrix___harmonic_8h_source.html  scamac__matrix___hubbard_8h.html  (+29 more)
drivers/matfuncs/scamac/doc_html/search/: all_0.js  files_1.js  groups_0.js  pages_0.js
exampleProjects/jdqr_cmake/: CMakeLists.txt  Djdqr.cpp
exampleProjects/jdqr_pkg_config/: CMakeLists.txt  Djdqr.cpp
fortran_bindings/: CMakeLists.txt  Makefile  README.md  cfwrapper.py.in  core_X.h.in  jada.h.in  jada_X.h.in  kernels.h.in  kernels_X.h.in  krylov_X.h.in  phist.doxyfile  phist_config.h  phist_dict.py.in  phist_fort.h  phist_fort_test.h  phist_testing.F90  phist_types.F90  precon_X.h.in  tools.h.in  tools_X.h.in
fortran_bindings/test/: ci-sc-dlr.sh  core.F90  jada.F90  kernels.F90
src/: aft.cpp  (+10 more)
src/craft/testapps/: CMakeLists.txt
src/craft/testapps/ghostTest/: imtql2.f  imtql2f.f
src/craft/testapps/minimal/: CMakeLists.txt  minimal.cpp
src/craft/testapps/minimalWithoutLoop/: minimalWithoutLoop.h
src/craft/testapps/mklexamples/: CMakeLists.txt  ex1.cpp  temp.cpp
src/craft/testapps/multiAftZones/: CMakeLists.txt  multipleAftZones.cpp  multipleAftZones.h
src/craft/testapps/multilevelCP/: multilevelCP.h
src/craft/testapps/multilevelCP2/: CMakeLists.txt  multilevelCP2.cpp
testapps/: CMakeLists.txt  README
testapps/arrayTest/: CMakeLists.txt  arrayTest.cpp
testapps/ghostTest/: CMakeLists.txt  ghostTest.cpp  ghostTest.h  lanczos.cpp  lanczos.h
testapps/minimal/: CMakeLists.txt  minimal.cpp  minimal.h
testapps/minimalWithoutLoop/: CMakeLists.txt  minimalWithoutLoop.cpp
testapps/mklexamples/: ex2.cpp
testapps/multiAftZones/: multipleAftZones.cpp
testapps/multilevelCP/: CMakeLists.txt  multilevelCP.cpp
testapps/multilevelCP2/: multilevelCP2.cpp
(+1179 files in other folders)
