cmake_minimum_required (VERSION 2.6)
project (APP-SCR-TEST C Fortran CXX)

find_package(MPI REQUIRED)
if(MPI_FOUND)
	message (STATUS "MPI package is found ${MPI_INCLUDE_PATH}")
	include_directories(${MPI_INCLUDE_PATH})
	set(LIBS ${LIBS} ${MPI_LIBRARIES})
	link_libraries(${MPI_LIBRARIES})
else()
	message (STATUS "MPI package is NOT found")
endif()

find_package(CPAFT REQUIRED)
if(CPAFT_FOUND)
	message (STATUS "CPAFT package is found ${CPAFT_INCLUDE_PATH}")
	include_directories(${CPAFT_INCLUDE_PATH})
	set(LIBS ${LIBS} ${CPAFT_LIBRARIES})
	link_libraries(${CPAFT_LIBRARIES})
	set( CMAKE_CXX_FLAGS ${CPAFT_FLAGS})
else()
	message (STATUS "CPAFT package is NOT found")
endif()

add_executable(arrayTest.bin arrayTest.cpp )

